--- a/index.html
+++ b/index.html
@@ -3,17 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="My personal portfolio" />
+    <meta name="description" content="Where's Waldo" />
     <meta name="author" content="minhhoccode111" />
-    <meta name="keywords" content="Personal Portfolio" />
+    <meta name="keywords" content="Where's Waldo" />
     <meta name="robots" content="index, follow" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
-    <title>Personal Portfolio</title>
+    <link rel="icon" type="image/svg+xml" href="/vite.svg">
+    <title>Where's Waldo</title>
   </head>
   <body>
+    <!-- because always header + main + footer -->
     <div id="root" class="min-h-screen flex flex-col justify-between items-stretch"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
